Setup new test runner

--- a/install
+++ b/install
@@ -1,27 +1,17 @@
 #!/bin/bash
 
 sudo apt update
-sudo apt-get update
-sudo apt-get install -y software-properties-common
-
 sudo apt install smlnj
-sudo apt install smlsharp
-sudo apt-get install llvm-14
-sudo apt-get install libmyth
 
-echo 'export LD_LIBRARY_PATH=/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH' >> ~/.bashrc
-source ~/.bashrc
-sudo ln -s /usr/lib/x86_64-linux-gnu/libmyth.so.0 /usr/lib/x86_64-linux-gnu/libmyth.so
-
-chmod +x ./start-wiki
+# Set permissions
 chmod +x ./test
 chmod +x ./test-compile
 
-cd wiki
-npm install
-#npx update-browserlist-db@latest
-cd ..
+# Get python path
+PYTHON_PATH=$(which python3)
+
+# Install python dependencies
+$PYTHON_PATH -m pip install -r requirements.txt
 
 echo "Set lectura credentials in .env file"
-
 echo -e "\nInstallation complete"
